<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/mainSurface"
    app:cardCornerRadius="24dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_01_01_2025_18_00"
            android:textColor="@color/mainInk"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/local_minha_casa"
            android:textColor="@color/mainInk"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/criado_por_arthur"
            android:textColor="@color/mainMuted"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

